--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage":"https://pedrocosta2099.github.io/WeatherApp/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -14,6 +15,7 @@
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
     "leaflet": "^1.8.0",
+    "nth-check": ">=2.0.1",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.8.4",
     "react-color": "^2.19.3",
@@ -27,7 +29,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -46,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0",
+    "nth-check": ">=2.0.1"
   }
 }
