--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage":"https://pedrocosta2099.github.io/WeatherApp/",
+  "homepage": "https://pedrocosta2099.github.io/WeatherApplication/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -14,6 +14,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "dotenv": "^16.0.3",
     "leaflet": "^1.8.0",
     "nth-check": ">=2.0.1",
     "react": "^18.2.0",
