--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "homepage": "https://pedrocosta2099.github.io/WeatherApplication/",
+  "homepage": "https://pedrocosta2099.github.io/ReactWeatherApp/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.0",
